# ARC

./: .env.example  .gitignore  AI_Agent_Course_Intro.docx  README.md  Related_Paper_Agent_Report.docx  pyproject.toml  requirements.txt  setup.bat  start.bat
.github/workflows/: deploy-pages.yml
docs/: MAINTAINERS.md
frontend/: app.js  app.js.b64  app_backup_full.js  config.js  index.html  package-lock.json  package.json  styles.css  styles.extra.css  tailwind.config.js
frontend/src/: index.css  main.jsx
scripts/: fetch_sample.py  front_proxy.py  generate_report.py  run_api.py
src/paper_agent/: api.py  cache.py  config.py  export.py  models.py  service.py  utils.py
src/paper_agent/datasources/: arxiv.py  openalex.py
src/paper_agent/pipeline/: embedding.py  summariser.py
