[project]
name = "paper-agent"
version = "0.1.0"
description = "Research paper agent data ingestion and caching"
authors = [{ name = "SUR" }]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "pydantic>=2.8.2",
    "pandas>=2.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.6.5"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
