[project]
name = "paper-agent"
version = "0.1.0"
description = "Research paper agent data ingestion, retrieval, and serving"
authors = [{ name = "SUR" }]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.1",
    "transformers>=4.44.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.6.5"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"